--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(csdiff CXX)
 enable_testing()
+# Some comment
 
 # C/C++ sources
 add_subdirectory(src)
